# vsql-http

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  TESTING.md  manifest.json
.github/workflows/: ci.yml
cmake/: FindVillageSQL.cmake
mysql-test/r/: vsql_http_requests.result
mysql-test/t/: vsql_http_encode.test  vsql_http_live.test  vsql_http_requests.test
src/: vsql_http.cc
test/r/: vsql_http_encode.result  vsql_http_live.result  vsql_http_requests.result
